// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditorEnvelopeView after loading stops 1`] = `
<Fragment>
  <ChannelKeyboardShortcuts
    busApi={
      EnvelopeBusInnerMessageHandler {
        "capturedInitRequestYet": false,
        "envelopeBusApi": Object {
          "postMessage": [Function],
        },
        "impl": Object {
          "receive_contentRequest": [Function],
          "receive_contentResponse": [Function],
          "receive_editorRedo": [Function],
          "receive_editorUndo": [Function],
          "receive_languageResponse": [Function],
          "receive_previewRequest": [Function],
          "receive_resourceContentList": [Function],
          "receive_resourceContentResponse": [Function],
        },
      }
    }
    keyboardShortcuts={
      DefaultKeyboardShortcutsService {
        "delayedKeyBindings": Array [],
        "editorContext": Object {
          "channel": "VSCODE",
          "operatingSystem": "WINDOWS",
        },
        "eventIdentifiers": 1,
        "keyBindings": Map {},
      }
    }
    stateControl={StateControl {}}
  />
  <KeyBindingsHelpOverlay
    context={
      Object {
        "channel": "VSCODE",
        "operatingSystem": "WINDOWS",
      }
    }
    keyboardShortcuts={
      DefaultKeyboardShortcutsService {
        "delayedKeyBindings": Array [],
        "editorContext": Object {
          "channel": "VSCODE",
          "operatingSystem": "WINDOWS",
        },
        "eventIdentifiers": 1,
        "keyBindings": Map {},
      }
    }
  />
  <Portal
    containerInfo={<div />}
  >
    <LoadingScreen
      visible={false}
    />
  </Portal>
</Fragment>
`;

exports[`EditorEnvelopeView after loading stops and editor is set 1`] = `
<Fragment>
  <ChannelKeyboardShortcuts
    busApi={
      EnvelopeBusInnerMessageHandler {
        "capturedInitRequestYet": false,
        "envelopeBusApi": Object {
          "postMessage": [Function],
        },
        "impl": Object {
          "receive_contentRequest": [Function],
          "receive_contentResponse": [Function],
          "receive_editorRedo": [Function],
          "receive_editorUndo": [Function],
          "receive_languageResponse": [Function],
          "receive_previewRequest": [Function],
          "receive_resourceContentList": [Function],
          "receive_resourceContentResponse": [Function],
        },
      }
    }
    keyboardShortcuts={
      DefaultKeyboardShortcutsService {
        "delayedKeyBindings": Array [],
        "editorContext": Object {
          "channel": "VSCODE",
          "operatingSystem": "WINDOWS",
        },
        "eventIdentifiers": 1,
        "keyBindings": Map {},
      }
    }
    stateControl={StateControl {}}
  />
  <KeyBindingsHelpOverlay
    context={
      Object {
        "channel": "VSCODE",
        "operatingSystem": "WINDOWS",
      }
    }
    keyboardShortcuts={
      DefaultKeyboardShortcutsService {
        "delayedKeyBindings": Array [],
        "editorContext": Object {
          "channel": "VSCODE",
          "operatingSystem": "WINDOWS",
        },
        "eventIdentifiers": 1,
        "keyBindings": Map {},
      }
    }
  />
  <Portal
    containerInfo={<div />}
  >
    <LoadingScreen
      visible={false}
    />
  </Portal>
  <DummyEditorComponent
    exposing={[Function]}
  />
</Fragment>
`;

exports[`EditorEnvelopeView first open 1`] = `
<Fragment>
  <Portal
    containerInfo={<div />}
  >
    <LoadingScreen
      visible={true}
    />
  </Portal>
</Fragment>
`;
